@@ -1,0 +1,7 @@
+class ImmediateHttpResponse(Exception):
+    """
+    This exception is used to interrupt the flow of processing to immediately
+    return a custom HttpResponse.
+    """
+    def __init__(self, response):
+        self.response = response
