@@ -1,0 +1,24 @@
+from allauth.utils import import_attribute
+
+import app_settings
+
+class DefaultSocialAccountAdapter(object):
+    def pre_social_login(self, request, sociallogin):
+        """
+        Invoked just after a user successfully authenticates via a
+        social provider, but before the login is actually processed
+        (and before the pre_social_login signal is emitted).
+
+        You can use this hook to intervene, e.g. abort the login by
+        raising an ImmediateHttpResponse
+        
+        Why both an adapter hook and the signal? Intervening in
+        e.g. the flow from within a signal handler is bad -- multiple
+        handlers may be active and are executed in undetermined order.
+        """
+        pass
+
+
+def get_adapter():
+    return import_attribute(app_settings.ADAPTER)()
+
